root/etc/iptables/iptables.rules
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A POSTROUTING -s CONFIG_OPENVPN_SUBNET -o CONFIG_LAN_INTERFACE -j MASQUERADE
-A POSTROUTING -s CONFIG_WIREGUARD_SUBNET -o CONFIG_LAN_INTERFACE -j MASQUERADE
COMMIT

*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

-A INPUT -i lo -j ACCEPT
-A INPUT -i tun+ -j ACCEPT
-A INPUT -i wg+ -j ACCEPT
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -m state --state INVALID -j DROP

# Accept ICMP type 8 (ping)
-A INPUT -p icmp -m icmp --icmp-type 8 -m limit --limit 1/second -j ACCEPT

# Allow from WAN (OpenVPN and WireGuard)
-A INPUT -i CONFIG_LAN_INTERFACE -p udp --dport 1194 -m state --state NEW -j ACCEPT
-A INPUT -i CONFIG_LAN_INTERFACE -p udp --dport 51820 -m state --state NEW -j ACCEPT

# Allow from LAN and VPN
-A INPUT -p tcp -s CONFIG_TRUSTED_NETWORKS --dport 22 -m state --state NEW -j ACCEPT

# OpenVPN
#-A FORWARD -i tun+ -j ACCEPT
-A FORWARD -i tun+ -o CONFIG_LAN_INTERFACE -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i CONFIG_LAN_INTERFACE -o tun+ -m state --state RELATED,ESTABLISHED -j ACCEPT

# WireGuard
#-A FORWARD -i wg+ -j ACCEPT
-A FORWARD -i wg+ -o CONFIG_LAN_INTERFACE -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i CONFIG_LAN_INTERFACE -o wg+ -m state --state RELATED,ESTABLISHED -j ACCEPT

#
# Containers
#

# Code server (webui)
-A INPUT -p tcp -s CONFIG_TRUSTED_NETWORKS --dport 8843 -m state --state NEW -j ACCEPT

# Deluge (webui, torrent)
#-A INPUT -p tcp -s CONFIG_TRUSTED_NETWORKS --dport 8112 -m state --state NEW -j ACCEPT
#-A INPUT -p tcp -s CONFIG_TRUSTED_NETWORKS --dport 6881 -m state --state NEW -j ACCEPT
#-A INPUT -p udp -s CONFIG_TRUSTED_NETWORKS --dport 6881 -m state --state NEW -j ACCEPT

# Homer (webui)
-A INPUT -p tcp -s CONFIG_TRUSTED_NETWORKS --dport 80 -m state --state NEW -j ACCEPT

# Pihole (webui, domain, dhcp)
-A INPUT -p tcp -s CONFIG_TRUSTED_NETWORKS --dport 61234 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -s CONFIG_TRUSTED_NETWORKS --dport 53 -m state --state NEW -j ACCEPT
-A INPUT -p udp -s CONFIG_TRUSTED_NETWORKS --dport 53 -m state --state NEW -j ACCEPT
-A INPUT -i eth0 -p udp -s 0.0.0.0 --sport 68 -d 255.255.255.255 --dport 67 -j ACCEPT

# Portainer-ce (webui, agent)
-A INPUT -p tcp -s CONFIG_TRUSTED_NETWORKS --dport 9000 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -s CONFIG_LAN_NETWORK --dport 8000 -m state --state NEW -j ACCEPT

# Roundcube (webui)
-A INPUT -p tcp -s CONFIG_TRUSTED_NETWORKS --dport 55523 -m state --state NEW -j ACCEPT

# Uptime-Kuma (webui)
-A INPUT -p tcp -s CONFIG_TRUSTED_NETWORKS --dport 3001 -m state --state NEW -j ACCEPT

# Wetty (webui)
-A INPUT -p tcp -s CONFIG_TRUSTED_NETWORKS --dport 3002 -m state --state NEW -j ACCEPT

COMMIT
